--- a/brewer/src/main/resources/templates/estilo/CadastroEstilo.html
+++ b/brewer/src/main/resources/templates/estilo/CadastroEstilo.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	layout:decorator="'layout/LayoutPadrao'">
+<html xmlns="http://www.w3.org/1999/xhtml" 	xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" 	layout:decorator="'layout/LayoutPadrao'">
 
 <head>
 	<title>Cadastro de estilo</title>
@@ -19,11 +17,15 @@
 	</div>
 	
 	<div class="container-fluid">
-		<form>
+		<th:block th:include="fragments/MensagemSucesso"></th:block>
+	
+		<form method="POST" th:object="${estilo}">
+			<th:block th:include="fragments/MensagensErroValidacao"></th:block>
+			
 			<div class="row">
-				<div class="form-group  col-sm-12">
-					<label for="nome">Nome</label>
-					<input type="text" class="form-control" id="nome" autofocus="autofocus"/>
+				<div class="form-group  col-sm-12" th:classappend="${#fields.hasErrors('nome')} ? has-error">
+					<label for="nome" class="control-label">Nome</label>
+					<input type="text" class="form-control" id="nome" autofocus="autofocus" th:field="*{nome}"/>
 				</div>
 			</div>
 				
